mi primer push, se agrego un lorem ipsum al final

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
                 <li>Si el acorde es dominante alterado se tocará un acorde menor un semitono ascendente: <strong>A7 alt = Bbm</strong></li>
             </ul>
         </section>
+
+        <h1>Lorem ipsum dolor sit</h1>
 <!-- Footer -->
         <footer>
             <img id="footImg" src="./Coquito.PNG" alt="elcoquis" width="50" height="50">
