primer branch de prueba. se agregaron mas h1 con lorem

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
         </section>
 
         <h1>Lorem ipsum dolor sit</h1>
+        <h1>Lorem ipsum dolor sit</h1>
+        <h1>Lorem ipsum dolor sit</h1>
+        <h1>Lorem ipsum dolor sit</h1>
+        <h1>Lorem ipsum dolor sit</h1>
+        
 <!-- Footer -->
         <footer>
             <img id="footImg" src="./Coquito.PNG" alt="elcoquis" width="50" height="50">
