fin del tutorial de git y github por hoy. se reestablecen los cambios hechos

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -36,14 +36,7 @@
                 <li>Si el acorde es dominante extendido (proveniente de una sucesión de dominantes)se tocará un acorde menor ubicado una 5.ª ascendente o 4.ª descendente: <strong>A7 = Em</strong></li>
                 <li>Si el acorde es dominante alterado se tocará un acorde menor un semitono ascendente: <strong>A7 alt = Bbm</strong></li>
             </ul>
-        </section>
-
-        <h1>Lorem ipsum dolor sit</h1>
-        <h1>Lorem ipsum dolor sit</h1>
-        <h1>Lorem ipsum dolor sit</h1>
-        <h1>Lorem ipsum dolor sit</h1>
-        <h1>Lorem ipsum dolor sit</h1>
-        
+        </section>        
 <!-- Footer -->
         <footer>
             <img id="footImg" src="./Coquito.PNG" alt="elcoquis" width="50" height="50">
