actualizacion de pagina

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,6 +16,7 @@
             <li>Página tributo <a href="./TRIBUTE/index.html">(Pat Martino)</a></li>
             <li>APP de Dictado <a href="./DICTADO/index.html">(Work)</a></li>
             <li>Bounce game <a href="./BOUNCE/index.html">(1st Game)</a></li>
+            <li>Manipulación del DOM <a href="./DOM/index.html">nueva pagina</a></li>
         </ul>
     </section>
 </body>
