index del cronometro

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -23,6 +23,9 @@
       <li>
         <a href="./citas/index.html">Citas</a>
       </li>
+      <li>
+        <a href="./CRONOMETRO/index.html">Cronometro</a>
+      </li>
     </ol>
   </div>
   <footer>
