--- a/DOM/CRONOMETRO/index.html
+++ b/DOM/CRONOMETRO/index.html
@@ -4,22 +4,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+  <!--favicon-->
   <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
-
+  <!--fonts google -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Noto+Sans+Thai:wght@300&display=swap" rel="stylesheet">
+  <!--iconos bootstrap-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <title>Cronómetro</title>
 </head>
 <body>
   <main class="main">
     <div class="principal">
-      <div class="cronometro">00:00:00</div>
+      <div id="cronometro">00:00:00</div>
       <div class="button-cont">
-        <button id="inicio-pausa" class="boton iniciar">Iniciar</button>
-        <button id="reiniciar">Reiniciar</button>
+        <button id="inicio-pausa" class="boton iniciar">
+          <i class="bi bi-play-fill"></i>
+        </button>
+        <button id="reiniciar" class="boton">
+          <i class="bi bi-arrow-counterclockwise"></i>
+        </button>
       </div>
     </div>
   </main>
   <footer>
     <a href="https://www.elcocodev.com" target="_blank">El Coco Dev</a>
+    <a href="../index.html">Volver</a>
   </footer>
 
   <script type="module" src="main.js"></script>
