Se agregó proyecto TODO (lista de tareas)
Tiene la funcionalidad actual de agregar al DOM los nuevos elementos creados por el usuario.

Falta manejar los cambios en los nuevos elementos creados (completar, eliminar)

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -26,6 +26,9 @@
       <li>
         <a href="./CRONOMETRO/index.html">Cronometro</a>
       </li>
+      <li>
+        <a href="./TODO/index.html">Lista de tareas</a>
+      </li>
     </ol>
   </div>
   <footer>
