--- a/DOM/TODO/index.html
+++ b/DOM/TODO/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"> <!--iconos de bootstrap-->
   <link rel="stylesheet" href="styles.css">
   <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
