--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <li>Página tributo <a href="./TRIBUTE/index.html">(Pat Martino)</a></li>
             <li>APP de Dictado <a href="./DICTADO/index.html">(Work)</a></li>
             <li>Bounce game <a href="./BOUNCE/index.html">(1st Game)</a></li>
-            <li>Manipulación del DOM <a href="./DOM/index.html">nueva página</a></li>
+            <li>Manipulación del DOM <a href="./DOM/index.html">Proyectos JS</a></li>
+            <li>Pokedex <a href="./pokedex/index.html">(Poke API)</a></li>
         </ul>
     </section>
 </body>
