anchor fix / remove target blank

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -32,7 +32,7 @@
     </ol>
   </div>
   <footer>
-    <a href="https://www.elcocodev.com" target="_blank">El Coco Dev</a>
+    <a href="https://www.elcocodev.com">El Coco Dev</a>
   </footer>
 </body>
 </html>
