--- a/DOM/rgb-color/index.html
+++ b/DOM/rgb-color/index.html
@@ -30,7 +30,7 @@
     </div>
   </main>
   <footer>
-    <a href="https://www.elcocodev.com" target="_blank">El Coco Dev</a>
+    <a href="https://www.elcocodev.com">El Coco Dev</a>
     <a href="../index.html">Volver</a>
   </footer>
 
