--- a/DOM/TODO/index.html
+++ b/DOM/TODO/index.html
@@ -21,7 +21,7 @@
     </div>
   </main>
   <footer>
-    <a href="https://www.elcocodev.com" target="_blank">El Coco Dev</a>
+    <a href="https://www.elcocodev.com">El Coco Dev</a>
     <a href="../index.html">Volver</a>
   </footer>
   <script type="module" src="main.js"></script>
