--- a/DOM/pizza-topping/index.html
+++ b/DOM/pizza-topping/index.html
@@ -20,7 +20,7 @@
     </div>
   </main>
   <footer>
-    <a href="https://www.elcocodev.com" target="_blank">El Coco Dev</a>
+    <a href="https://www.elcocodev.com">El Coco Dev</a>
     <a href="../index.html">Principal</a>
   </footer>
   <script src=".main.js"></script>
