--- a/DOM/random-color/index.html
+++ b/DOM/random-color/index.html
@@ -16,7 +16,7 @@
     </div>
   </main>
   <footer>
-    <a href="https://www.elcocodev.com" target="_blank">El Coco Dev</a>
+    <a href="https://www.elcocodev.com">El Coco Dev</a>
   </footer>
   <script src="./main.js"></script>
 </body>
