--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>EL COCO'S NEST</h1>
-    <h1>hola hola hola</h1>
+    <h1>hola hola</h1>
 
     <section id="box">
         <h1>Proyectos recientes:</h1>
