fix index principal anchor href (pokedex)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li>APP de Dictado <a href="./DICTADO/index.html">(Work)</a></li>
             <li>Bounce game <a href="./BOUNCE/index.html">(1st Game)</a></li>
             <li>Manipulación del DOM <a href="./DOM/index.html">Proyectos JS</a></li>
-            <li>Pokedex <a href="./pokedex/index.html">(Poke API)</a></li>
+            <li>Pokedex <a href="./pokedex/resultado-final/index.html">(Poke API)</a></li>
         </ul>
     </section>
 </body>
